styles/layout/templates/_templates.scss
/* ... */
@media only screen and (max-width: 992px) {
    .template {
        &-youtube {
            &-wrapper {
                padding: 3rem 0 1.5rem;
                border-radius: 1.25rem;
            }

            &-title {
                h2 {
                    @include mobile {
                        font-size: 1.5rem;
                    }
                }
            }

            &-description {
                @include mobile {
                    font-size: 0.875rem;
                    line-height: 1.25rem;
                    width: 90%;
                }
            }

            &-screen {
                width: 90%;
                padding: 1.25rem 1.25rem 0;
                border-radius: 1rem;

                &-blur {
                    backdrop-filter: blur(0.5px);
                }

                &-play {
                    svg {
                        width: 100px;
                        height: 100px;
                    }
                }

                img {
                    border-top-right-radius: 0.5rem;
                    border-top-left-radius: 0.5rem;
                }
            }
        }
    }
}

// TEMPLATE FEATURES TYPE 1
.template {
    &-features-horizontal {
        &-wrapper {
            padding: 5rem 2rem;
            border-radius: 2rem;
            background: var(--surface-card, #FFF);
        }

        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: 1.5rem;
        margin: 0 auto;
        width: fit-content;

        &-card {
            width: 21.125rem;
            padding: 1.25rem;
            border-radius: 1.3125rem;
            border: 1px solid var(--surface-border, #EEE);
            background: var(--surface-0, #FFF);

            &-top {
                width: 100%;
                margin-bottom: 1.25rem;
                background: var(--surface-100, #FFF);
                border-radius: 0.65625rem;
                overflow: hidden;
                display: flex;

                img {
                    width: 100%;
                    border-radius: inherit;
                }
            }

            &-bottom {
                &-title {
                    color: var(--surface-900);
                    font-size: 1.09375rem;
                    font-weight: 600;
                    line-height: 1.3125rem;
                    margin-top: 0;
                    margin-bottom: 0.75rem;
                }

                &-description {
                    color: var(--surface-600);
                    font-size: 0.875rem;
                    font-weight: 400;
                    line-height: 1.3125rem;
                    margin: 0;
                }
            }
        }
    }
}

@media only screen and (max-width: 992px) {
    .template {
        &-features-horizontal {
            &-wrapper {
                padding: 2rem 1.25rem;
                border-radius: 1.25rem;
            }

            &-card {
                padding: 1rem;
                border-radius: 1rem;
            }
        }
    }
}

@media only screen and (max-width: 576px) {
    .template {
        &-features-horizontal {
            &-wrapper {
                padding: 1.5rem 1rem;
            }

            width: 98%;

            &-card {
                width: 100%;
            }
        }
    }
}

// TEMPLATE FEATURES TYPE 2
.template {
    &-features-vertical {
        &-wrapper {
            padding: 7rem 2rem;
            border-radius: 2rem;
            background: var(--surface-card, #FFF);
        }

        margin: 0 auto;
        width: 70%;
        max-width: 52.75rem;
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        gap: 1.5rem;

        &-col {
            display: flex;
            flex-direction: column;
            gap: 1.5rem;
            flex: 1;

            &:last-child {
                margin-top: 7.5rem;
            }
        }

        &-card {
            width: 100%;
            padding: 1.25rem;
            border-radius: 1.3125rem;
            border: 1px solid var(--surface-border);
            background: var(--surface-0);

            &-image {
                width: auto;
                background: var(--surface-100);
                border-radius: 0.65625rem;
                display: flex;

                img {
                    border-radius: inherit;
                    width: 100%;
                    height: auto;
                }
            }

            h2 {
                margin: 1.25rem 0 0;
                color: var(--surface-900, var(--surface-900, #212121));
                font-size: 1.09375rem;
                font-weight: 600;
                line-height: 1.3125rem;
            }

            p {
                margin: 0.75rem 0 0;
                color: var(--surface-600, #757575);
                font-size: 0.875rem;
                font-weight: 400;
                line-height: 1.3125rem;
            }
        }
    }
}

@media only screen and (max-width: 992px) {
    .template {
        &-features-vertical {
            &-wrapper {
                padding: 2.5rem 1rem;
                border-radius: 1.25rem;
            }

            max-width: 100%;
            width: 100%;
            align-items: center;
            justify-content: center;

            &-card {
                padding: 1rem;
                border-radius: 1rem;

                &-img {
                    height: auto;
                    width: 100%;
                    border-radius: 0.5rem;
                }

                &-withMargin {
                    margin-top: 0rem;
                }

                &-withoutMargin {
                    margin-top: 0rem;
                }
            }
        }
    }
}
/* ... */

